--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -130,3 +130,5 @@
         <div id="textRightsReserved">Todos los derechos reservados</div>
     </div>
 </footer>
+<script src="/js/ventanaRegistro.js"></script>
+<script src="/js/ventanaLogin.js"></script>
