--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -35,7 +35,7 @@ h1 {
 .opcionesMenu li{
     list-style: none;
     width: 140px;
-    height: 50px;
+    height: 61px;
     text-align: center;
     background-color: white;
     margin-bottom: 20px;
@@ -262,6 +262,8 @@ main{
     }
     .menuHeader{
         display: flex;
+        width: 50%;
+        height: 110px;
     }
     .menuHeader li{
         margin:10px;
