--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,159 +1,119 @@
-<%- include('./partials/head') %>
+<%- include('partials/head',{styles:['home']}) %>
 
-<body>
-   <%- include('./partials/header') %>
-    <div class="banner"><img src="images/banner.jpg"></div>
-
-    <main>
-        <h2>Basado en las últimas visitas</h2>
-        <div class="ofertas">
-            <div class="ofertasBloques">
-                <div class="bloque1">
-                    <div class="articulo-horno">
-                        <div class="horno"><img src="images/horno.jpeg"> </div>
-                        <div class="relative-horno">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$6.770</div>
-                                <div class="desc">40% OFF</div>
+    <body>
+        <%- include('partials/header') %>
+            <main>
+                <h2>Basado en las últimas visitas</h2>
+                <div class="ofertas">
+                    <div class="ofertasBloques">
+                        <div class="bloque1">
+                            <div class="articulo-horno">
+                                <div class="horno"><img src="images/horno.jpeg"> </div>
+                                <div class="relative-horno">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$6.770</div>
+                                        <div class="desc">40% OFF</div>
+                                    </div>
+                                    <div class="descripcion">Horno microondas</div>
+                                </div>
                             </div>
-                            <div class="descripcion">Horno microondas</div>
+
+
+                            <div class="articulo-laptop">
+                                <div class="laptop"><img src="images/laptop.jpg"></div>
+                                <div class="relative-laptop">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$230.000</div>
+                                        <div class="desc">20% off</div>
+                                    </div>
+                                    <div class="descripcion">Laptop Pro 2019</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bloque2">
+                            <div class="articulo-samsung">
+                                <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                                <div class="relative-samsung">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$70.500</div>
+                                        <div class="desc">10% off</div>
+                                    </div>
+                                    <div class="descripcion">Samsung Galaxy S10</div>
+                                </div>
+                            </div>
+                            <div class="articulo-tv">
+                                <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                                <div class="relative-tv">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$23.200</div>
+                                        <div class="desc">5% off</div>
+                                    </div>
+                                    <div class="descripcion">SmartTv Samsung 43"</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
 
-                    <div class="articulo-laptop">
-                        <div class="laptop"><img src="images/laptop.jpg"></div>
-                        <div class="relative-laptop">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$230.000</div>
-                                <div class="desc">20% off</div>
+                    <h2>Ofertas</h2>
+                    <div class="ofertasBloques">
+                        <div class="bloque1">
+                            <div class="articulo-horno">
+                                <div class="horno"><img src="images/horno.jpeg"></div>
+                                <div class="relative-horno">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$6.770</div>
+                                        <div class="desc">40% OFF</div>
+                                    </div>
+                                    <div class="descripcion">Horno microondas</div>
+                                </div>
                             </div>
-                            <div class="descripcion">Laptop Pro 2019</div>
+
+                            <div class="articulo-laptop">
+                                <div class="laptop"><img src="images/laptop.jpg"></div>
+                                <div class="relative-laptop">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$230.000</div>
+                                        <div class="desc">20% off</div>
+                                    </div>
+                                    <div class="descripcion">Laptop Pro 2019</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bloque2">
+                            <div class="articulo-samsung">
+                                <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                                <div class="relative-samsung">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$70.500</div>
+                                        <div class="desc">10% off</div>
+                                    </div>
+                                    <div class="descripcion">Samsung Galaxy S10</div>
+                                </div>
+                            </div>
+                            <div class="articulo-tv">
+                                <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                                <div class="relative-tv">
+                                    <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                                    <div class="precio-descuento">
+                                        <div class="precios">$23.200</div>
+                                        <div class="desc">5% off</div>
+                                    </div>
+                                    <div class="descripcion">SmartTv Samsung 43"</div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="bloque2">
-                    <div class="articulo-samsung">
-                        <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
-                        <div class="relative-samsung">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$70.500</div>
-                                <div class="desc">10% off</div>
-                            </div>
-                            <div class="descripcion">Samsung Galaxy S10</div>
-                        </div>
-                    </div>
-                    <div class="articulo-tv">
-                        <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
-                        <div class="relative-tv">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$23.200</div>
-                                <div class="desc">5% off</div>
-                            </div>
-                            <div class="descripcion">SmartTv Samsung 43"</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </main>
+            <%- include('partials/footer') %>
+    </body>
 
-
-            <h2>Ofertas</h2>
-            <div class="ofertasBloques">
-                <div class="bloque1">
-                    <div class="articulo-horno">
-                        <div class="horno"><img src="images/horno.jpeg"></div>
-                        <div class="relative-horno">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$6.770</div>
-                                <div class="desc">40% OFF</div>
-                            </div>
-                            <div class="descripcion">Horno microondas</div>
-                        </div>
-                    </div>
-
-                    <div class="articulo-laptop">
-                        <div class="laptop"><img src="images/laptop.jpg"></div>
-                        <div class="relative-laptop">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$230.000</div>
-                                <div class="desc">20% off</div>
-                            </div>
-                            <div class="descripcion">Laptop Pro 2019</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="bloque2">
-                    <div class="articulo-samsung">
-                        <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
-                        <div class="relative-samsung">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$70.500</div>
-                                <div class="desc">10% off</div>
-                            </div>
-                            <div class="descripcion">Samsung Galaxy S10</div>
-                        </div>
-                    </div>
-                    <div class="articulo-tv">
-                        <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
-                        <div class="relative-tv">
-                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                            <div class="precio-descuento">
-                                <div class="precios">$23.200</div>
-                                <div class="desc">5% off</div>
-                            </div>
-                            <div class="descripcion">SmartTv Samsung 43"</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="overlay" id="overlay">
-            <div class="formularioRegistro" id="formularioRegistro">
-                <form action="" method="dialog" class="crear-formulario">
-                    <a href="/" id="botonCerrar" class="botonCerrarFor"><i class="fas fa-times"></i></a>
-                    <h2>Completa tus datos</h2>
-                    <div class="divNombreApellido">
-                        <div class="nombre">
-                            <label>Nombre:</label>
-                            <input type="text" name="nombreUsuario" id="nombreUsuario" class="input-control">
-                        </div>
-                        <div class="apellido">
-                            <label>Apellidos:</label>
-                            <input type="text" name="apellidoUsuario" class="input-control">
-                        </div>
-                    </div>
-                    <div class="celular">
-                        <label>Celular:</label>
-                        <input type="text" name="celularUsuario" class="input-control">
-                    </div>
-                    <div class="divCorreoContrasena">
-                        <div class="correo">
-                            <label>Correo:</label>
-                            <input type="text" name="correoUsuario" id="correoUsuario" class="input-control">
-                        </div>
-                        <div class="contrasena">
-                            <label>Contraseña:</label>
-                            <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
-                                class="input-control">
-                        </div>
-                    </div>
-
-                    <div class="boton-guardar">
-                        <button type="submit" class="boton-formulario">ENVIAR</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <script src="../ventanaRegistro.js"></script>
-    </main>
-    <%- include('./partials/footer') %>
-</body>
-
-</html>
+    </html>
