--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/home.css">
 <header>
     <div class="logo"><img src="images/logo.svg" alt="Logo ElctroArco"></div>
     <div class="header1">
@@ -11,17 +12,17 @@
         <form action="" class="search">
             <div class="opcionesMenu">
                 <ul class="menuHeader">
-                    <li>Categoria 1</li>
-                    <li>Categoria 2</li>
-                    <li>Categoria 3</li>
-                    <li>Categoria 4</li>
+                    <li>Electrodomésticos</li>
+                    <li>Tecnología</li>
+                    <li>Videos Juegos</li>
                 </ul>
 
                 <ul class="menuHeader">
-                    <li><a href="/home"></a>Home <i class="fa-solid fa-house"></i></li>
-                    <li><a href="#" class="abrirRegistro" id="abrirRegistro">Crea tu cuenta</a><i class="fa-solid fa-address-card"></i></li>
-                    <li><a href="/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-                    <li>Mis compras <i class="fa-sharp fa-solid fa-basket-shopping"></i></li>
+                    <li><a href="/home.ejs">Home</a><i class="fa-solid fa-house"></i></li>
+                    <li><a href="/register.ejs">Regístrate</a><i
+                            class="fa-solid fa-address-card"></i></li>
+                    <li><a href="/login.ejs">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li>Carrito<i class="fa-solid fa-cart-shopping"></i></li>
                     <li>Ayuda</li>
                 </ul>
             </div>
@@ -29,5 +30,5 @@
                 <i class="fas fa-bars"></i>
             </div>
     </div>
-    </form>
+    <div class="banner"><img src="images/banner.jpg"></div>
 </header>
