--- a/src/views/productdetail.ejs
+++ b/src/views/productdetail.ejs
@@ -1,22 +1,18 @@
-<<<<<<< HEAD
-<%- include('partials/head',{styles:['productdetail']}) %>
-=======
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroArco</title>
-
-
-    <link rel="stylesheet" href="/css/colors.css">
-    <link rel="stylesheet" href="/css/footer.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="/css/productdetail.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/34b99c374a.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="/css/colors.css" rel="stylesheet">
+    <title>ElectoArco</title>
 </head>
->>>>>>> 334d5894c56444269ff17b7e85e40b0045a19947
 
 <body>
     <%- include('./partials/header') %>
@@ -147,12 +143,7 @@
         <section id="containerMoreInfoProduct">
             <i class="fas fa-info-circle"></i>
             <p>Más información del producto</p>
-<<<<<<< HEAD
         </div>
-        <%- include('./partials/register') %>
-=======
-        </section>
->>>>>>> 334d5894c56444269ff17b7e85e40b0045a19947
     </main>
     <%- include('./partials/footer') %>
 </body>
