Agregando cambios en los enlaces

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,11 +18,11 @@
                 </ul>
 
                 <ul class="menuHeader">
-                    <li><a href="/home.ejs">Home</a><i class="fa-solid fa-house"></i></li>
-                    <li><a href="/register.ejs">Regístrate</a><i
+                    <li><a href="/">Home</a><i class="fa-solid fa-house"></i></li>
+                    <li><a href="register">Regístrate</a><i
                             class="fa-solid fa-address-card"></i></li>
-                    <li><a href="/login.ejs">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-                    <li>Carrito<i class="fa-solid fa-cart-shopping"></i></li>
+                    <li><a href="login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li><a href="productCart">Carrito</a><i class="fa-solid fa-cart-shopping"></i></li>
                     <li>Ayuda</li>
                 </ul>
             </div>
