--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -40,7 +40,7 @@
                     <button class="increment"><i class="fa-solid fa-plus"></i></button>
                 </div>
                 <div class="information">
-                    <p class="price">$2.300.200 und</p>
+                    <p class="price">2.300.200 und</p>
                     <p class="discount">5% off und</p>
                 </div>
                 <button type="reset" class="reset">Eliminar</button>
@@ -94,9 +94,9 @@
                 </div>
             </div>
         </div>
-        <%- include('./partials/register') %>
+      
     </main>
-    <%- include('./partials/footer') %>
+
 
 </body>
 
