--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -39,7 +39,7 @@
                     </form>
                 </div>
             </div>
-            <%- include('./partials/footer') %>
+            <%- include('partials/footer') %>
     </body>
 
     </html>
