Agregando cambios en el home de administrador

--- a/src/views/formCreationProduct.ejs
+++ b/src/views/formCreationProduct.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/head',{styles:['formCreationProduct']}) %>
 
     <body>
-        <%- include('./partials/header') %>
+        <%- include('./partials/headerAdmin') %>
         <div class="titulo"><h1>Creación de productos</h1></div>
             <main class="main">
                 
