--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,7 +5,7 @@
             
             <div class="overlay2" id="overlay2">
                 <div class="formularioRegistroLogin" id="formularioRegistroLogin">
-                    <form action="" method="dialog" class="crear-formulario">
+                    <form action="/headerAdmin" method="POST" class="crear-formulario">
                         <h2>Ingresa tus datos</h2>
                         <div class="divNombreApellidologin">
                             <label class="labelCorreo">Correo:</label>
@@ -14,7 +14,7 @@
                         <div class="contrasenaLogin">
                             <label class="labelContraseña">Contraseña:</label>
                             <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
-                                class="contraseñaUsuario">
+                                class="contraseñaUsuario" >
                         </div>
                         <p>Recordar contraseña</p>
                 </div>
