--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -8,6 +8,7 @@
     <title>ElectroArco</title>
  <!--Estilos propios-->
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/src/public/css/homeAdmin.css">
     <link rel="stylesheet" href="/css/register.css">
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/colors.css">
@@ -15,7 +16,7 @@
     <link rel="stylesheet" href="/css/mediaQueryCart.css" >
     <link rel="stylesheet" href="/css/productdetail.css">
     <link rel="stylesheet" href="/css/footer.css">
-    <link rel="stylesheet" href="/css/colors.css">
+    <link rel="stylesheet" href="/src/public/css/colors.css">
  <!--Fuentes-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
