--- a/src/views/editProduct.ejs
+++ b/src/views/editProduct.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/head',{styles:['formCreationProduct']}) %>
 
     <body>
-        <%- include('./partials/header') %>
+        <%- include('./partials/headerAdmin') %>
             <div class="titulo">
                 <h1>Editar producto</h1>
             </div>
