--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/head',{styles:['home']}) %>
 
     <body>
-        <%- include('partials/header') %>
+        <%- include('partials/headerAdmin') %>
             <main>
                 <h2>Basado en las últimas visitas</h2>
                 <div class="ofertas">
