--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -53,3 +53,135 @@ p{
     justify-content: space-between;
     border-radius: 5px;
 }
+
+/** Inicio del Main **/
+
+h1 {
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    font-style: italic;
+}
+main {
+    background-color: var(--grisClaro);
+    height: 90%;
+    padding: 10px;
+}
+
+form.login {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+    justify-content: center;
+    margin-left: 40px;
+}
+
+form.login {
+    background-color: var(--blanco);
+}
+
+
+input {
+    padding: 8px;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 1em;
+    padding-right: 25px;
+    border-radius: 2px;
+    border: 1px solid var(--grisOscuro);
+    outline: none;
+    background-color: var(--grisClaro);
+}
+.form-container {
+    width: 75%;
+    margin: auto;
+}
+
+.email {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 75%;
+    padding-bottom: 5px;
+    align-items: stretch;
+    align-content: center;
+    margin-left: 10%;
+}
+.password {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 75%;
+    padding-bottom: 5px;
+    align-items: stretch;
+    align-content: center;
+    margin: auto;
+}
+
+
+
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 75%;
+}
+
+.button-one {
+    height: 35px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: center;
+    margin-bottom: 10px;
+
+}
+
+button.one {
+    width: 80%;
+    background-color: var(--grisClaro);
+    border-radius: 5px;
+    border: 1px solid var(--grisOscuro);
+}
+button.one:hover{
+    background-color: var(--azulRey);
+    transition: 450ms;
+    color: var(--blanco);
+}
+.acceder {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+p.acceso {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    font-size: 12px;
+}
+a.recuperar {
+    text-align: center;
+    font-size: 14px;
+    text-decoration: revert;
+    color: var(--celeste);
+}
+a.register {
+    display: flex;
+    text-decoration: revert;
+    color: var(--celeste);
+    font-size: 12px;
+    padding-left: 10px;
+}
+.recuperar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+form.login:hover{
+    box-shadow: 0px 0px 30px var(--negro);
+}
+
+/** fin del Main **/
