--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -25,7 +25,7 @@
                 </div>
                 </form>
             </div>
-            <%- include('./partials/footer') %>
+            <%- include('partials/footer') %>
     </body>
 
     </html>
