--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -85,13 +85,13 @@
                 <p>Información a proveedores</p>
             </div>
             <div class="textFooterContainer2">
-                <p></p>Información a inversionistas
+                <p>Información a inversionistas</p>
             </div>
             <div class="textFooterContainer2">
-                <p></p>Responsabilidad Social Empresarial
+                <p>Responsabilidad Social Empresarial</p>
             </div>
             <div class="textFooterContainer2">
-                <p></p>La linea de ética y anticorrupción
+                <p>La linea de ética y anticorrupción</p>
             </div>
             <div class="textFooterContainer2">
                 <p>Trabaje para nosotros</p>
