Agregando cambios a los estilos de login

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,7 +16,7 @@
                             <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
                                 class="contraseñaUsuario" >
                         </div>
-                        <p>Recordar contraseña</p>
+                        <p class="remember">Recordar contraseña</p>
                 </div>
 
                 <div class="botonGuardarLogin">
