Se corrigen las rutas y los controladores

--- a/src/views/main/home.ejs
+++ b/src/views/main/home.ejs
@@ -1,14 +1,14 @@
-<%- include('partials/head',{styles:['home']}) %>
+<%- include('../partials/head',{styles:['home']}) %>
 
     <body>
-        <%- include('partials/header') %>
+        <%- include('../partials/header') %>
             <main>
                 <h2>Basado en las últimas visitas</h2>
                 <div class="ofertas">
                     <div class="ofertasBloques">
                         <div class="bloque1">
                             <div class="articulo-horno">
-                                <div class="horno"><img src="images/horno.jpeg"> </div>
+                                <div class="horno"><img src="images/products/horno.jpeg"> </div>
                                 <div class="relative-horno">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -21,7 +21,7 @@
 
 
                             <div class="articulo-laptop">
-                                <div class="laptop"><img src="images/laptop.jpg"></div>
+                                <div class="laptop"><img src="images/products/laptop.jpg"></div>
                                 <div class="relative-laptop">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -34,7 +34,7 @@
                         </div>
                         <div class="bloque2">
                             <div class="articulo-samsung">
-                                <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                                <div class="samsung"><img src="images/products/img-samsung-galaxy-s10.jpg"></div>
                                 <div class="relative-samsung">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -45,7 +45,7 @@
                                 </div>
                             </div>
                             <div class="articulo-tv">
-                                <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                                <div class="tv"><img src="images/products/img-tv-samsung-smart.jpg"></div>
                                 <div class="relative-tv">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -63,7 +63,7 @@
                     <div class="ofertasBloques">
                         <div class="bloque1">
                             <div class="articulo-horno">
-                                <div class="horno"><img src="images/horno.jpeg"></div>
+                                <div class="horno"><img src="images/products/horno.jpeg"></div>
                                 <div class="relative-horno">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -75,7 +75,7 @@
                             </div>
 
                             <div class="articulo-laptop">
-                                <div class="laptop"><img src="images/laptop.jpg"></div>
+                                <div class="laptop"><img src="images/products/laptop.jpg"></div>
                                 <div class="relative-laptop">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="bloque2">
                             <div class="articulo-samsung">
-                                <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                                <div class="samsung"><img src="images/products/img-samsung-galaxy-s10.jpg"></div>
                                 <div class="relative-samsung">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                             <div class="articulo-tv">
-                                <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                                <div class="tv"><img src="images/products/img-tv-samsung-smart.jpg"></div>
                                 <div class="relative-tv">
                                     <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                                     <div class="precio-descuento">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </main>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
     </html>
