--- a/src/public/css/productdetail.css
+++ b/src/public/css/productdetail.css
@@ -49,7 +49,6 @@
 .containerProductInfo {
     margin: 5px 15px 5px 15px;
 }
-
 .price1 {
     font-size: 18px;
     font-weight: 800;
@@ -57,6 +56,9 @@
     margin: 5px 15px 5px 15px;
     padding-top: 10px;
     color: var(--rojo);
+}
+.pricedetail{
+    font-size: 18px;
 }
 
 .price1::before {
@@ -228,11 +230,11 @@
         font-weight: 300;
     }
 
-    .price::before {
+    .price3::before {
         content: "$ ";
     }
 
-    .price {
+    .price3 {
         display: flex;
         font-size: 32px;
         line-height: 37px;
