--- a/src/views/product/productdetail.ejs
+++ b/src/views/product/productdetail.ejs
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/productdetail.css">
-    <link rel="stylesheet" href="/css/footer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/34b99c374a.js" crossorigin="anonymous"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
-    <link href="/css/colors.css" rel="stylesheet">
-    <title>ElectoArco</title>
-</head>
+<%- include('../partials/head',{styles:['productdetail']}) %>
 
 <body>
-    <%- include('./partials/header') %>
+    <%- include('../partials/header') %>
     <main>
         <section class="containerProductDetail1">
             <div class="containerNavigationBar">
@@ -41,9 +26,9 @@
                     <p>Código: 0802 0011 2236</p>
                 </div>
             </div>
-            <div class="slide1"><img src="images/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
+            <div class="slide1"><img src="/images/products/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
             <div class="price1">
-                <p>1.700.000</p>
+                <p class="price2">1.700.000</p>
             </div>
             <div id="containerPriceAndShipping1">
                 <div class="deliveryOptions1">
@@ -78,14 +63,14 @@
             </div>
         </section>
         <section class="containerProductDetail">
-            <div class="slide"><img src="images/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
+            <div class="slide"><img src="images/products/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
             <div id="containerProductDescription">
                 <p class="titleProductDescription">Samsung Galaxy S10 Core 32GB Blue</p>
                 <p class="subtitleProductDescription">Código: 0802 0011 2236</p>
             </div>
             <div id="containerPriceAndShipping">
                 <div class="price">
-                    <p>1.700.000</p>
+                    <p class="price3">1.700.000</p>
                 </div>
                 <div class="addAmount">
                     <button class="addToCart" type="submit">Agregar al Carrito</button>
@@ -146,6 +131,6 @@
             <p>Más información del producto</p>
         </div>
     </main>
-    <%- include('./partials/footer') %>
+    <%- include('../partials/footer') %>
 </body>
 </html>
