Se crean las rutas y controladores de login y register

--- a/src/views/product/formCreationProduct.ejs
+++ b/src/views/product/formCreationProduct.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head',{styles:['formCreationProduct']}) %>
+<%- include('../partials/head',{styles:['formCreationProduct']}) %>
 
     <body>
-        <%- include('./partials/headerAdmin') %>
+        <%- include('../partials/header') %>
         <div class="titulo"><h1>Creación de productos</h1></div>
             <main class="main">
                 
@@ -52,5 +52,5 @@
                 </form>
             </main>
 
-            <%- include('./partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
