--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head',{styles:['login']}) %>
+<%- include('../partials/head',{styles:['login']}) %>
 
     <body>
-        <%- include('partials/header') %>
+        <%- include('../partials/header') %>
             
             <div class="overlay2" id="overlay2">
                 <div class="formularioRegistroLogin" id="formularioRegistroLogin">
@@ -25,7 +25,7 @@
                 </div>
                 </form>
             </div>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
     </html>
