--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head',{styles:['register']}) %>
+<%- include('../partials/head',{styles:['register']}) %>
 
     <body>
-        <%- include('partials/header') %>
+        <%- include('../partials/header') %>
             <div class="overlay" id="overlay">
                 <div class="formularioRegistro" id="formularioRegistro">
                     <form action="" method="dialog" class="crear-formulario">
@@ -39,7 +39,7 @@
                     </form>
                 </div>
             </div>
-            <%- include('partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
 
     </html>
