--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -48,7 +48,7 @@
                 <p>Cambios y devoluciones</p>
             </div>
             <div class="textFooterContainer2">
-                <p>Política de proteccion de datos personales/p>
+                <p>Política de proteccion de datos personales</p>
             </div>
             <div class="textFooterContainer2">
                 <p>Términos y condiciones</p>
@@ -126,7 +126,7 @@
         </div>
     </div>
     <div class="containerRightsReserved">
-        <div class="logoRightsReserved"><img src="images/logo.svg" alt="logoElectroArco"></div>
+        <div class="logoRightsReserved"><img src="images/home/logo.svg" alt="logoElectroArco"></div>
         <div id="textRightsReserved">Todos los derechos reservados</div>
     </div>
 </footer>
