--- a/src/views/partials/headerAdmin.ejs
+++ b/src/views/partials/headerAdmin.ejs
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/homeAdmin.css">
 <header>
-    <div class="logo"><img src="images/logo.svg" alt="Logo ElctroArco"></div>
+    <div class="logo"><img src="images/home/logo.svg" alt="Logo ElctroArco"></div>
     <div class="header1">
         <div class="buscarProducto">
             <input type="search" placeholder="Buscar productos,marcas" class="input-control2">
@@ -38,5 +38,5 @@
                 <i class="fas fa-bars"></i>
             </div>
     </div>
-    <div class="banner"><img src="images/banner.jpg"></div>
+    <div class="banner"><img src="images/home/banner.jpg"></div>
 </header>
