--- a/src/views/product/editProduct.ejs
+++ b/src/views/product/editProduct.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/head',{styles:['formCreationProduct']}) %>
+<%- include('../partials/head',{styles:['formCreationProduct']}) %>
 
     <body>
-        <%- include('./partials/headerAdmin') %>
+        <%- include('../partials/headerAdmin') %>
             <div class="titulo">
                 <h1>Editar producto</h1>
             </div>
@@ -62,5 +62,5 @@
                 </form>
             </main>
 
-            <%- include('./partials/footer') %>
+            <%- include('../partials/footer') %>
     </body>
