Agregando vistas de administracion de usuarios

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -18,12 +18,12 @@
                 </ul>
 
                 <ul class="menuHeader">
-                    <li><a href="/">Home</a><i class="fa-solid fa-house"></i></li>
-                    <li><a href="register">Regístrate</a><i
-                            class="fa-solid fa-address-card"></i></li>
-                    <li><a href="login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-                    <li><a href="productCart">Carrito</a><i class="fa-solid fa-cart-shopping"></i></li>
-                    <li>Ayuda</li>
+                    <li class="menuHeader"><a href="/">Home</a><i class="fa-solid fa-house"></i></li>
+                    <li class="menuHeader"><a href="register">Regístrate</a><i class="fa-solid fa-address-card"></i>
+                    </li>
+                    <li class="menuHeader"><a href="login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
+                    <li class="menuHeader"><a href="productCart">Carrito</a><i class="fa-solid fa-cart-shopping"></i></li>
+                    <li class="menuHeader"><a>Ayuda</a></li>
                 </ul>
             </div>
             <div class="burger-menu">
