--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -8,8 +8,43 @@ main{
 }
 body{
     font-family: 'Roboto', sans-serif;
-    
-
+}
+a {
+    text-decoration: none;
+    color: var(--negro);
+    width: 70%;
+    text-align: right;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+}
+i.fa-solid.fa-house  {
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+    padding-left: 1px;
+    padding-top: 5px;
+}
+i.fa-solid.fa-address-card{
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+    padding-left: 12px;
+    padding-top: 5px;
+}
+i.fa-solid.fa-right-to-bracket{
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+i.fa-solid.fa-cart-shopping{
+    display: flex;
+    justify-content: flex-start;
+    width: 30%;
+    padding-left: 5px;
+    padding-top: 5px;
 }
 header{
     width:100%;
@@ -31,6 +66,15 @@ h1 {
 .logo img{
     width: 100%;
     height: 200px;  
+    color: red;
+}
+li.menuHeader {
+    margin: 0;
+    margin-top: 10px;
+    font-size: 15px;
+}
+li.menuHeader {
+    width: 20%;
 }
 .opcionesMenu li{
     list-style: none;
@@ -41,7 +85,7 @@ h1 {
     margin-bottom: 20px;
     border:solid 1px white;
     padding-top: 15px;
-   
+ 
 }
 .opcionesMenu li:hover{
     box-shadow: 10px 10px 5px 0px gray;
@@ -265,8 +309,28 @@ main{
         width: 50%;
         height: 110px;
     }
+    
     .menuHeader li{
-        margin:10px;
+        margin-top:10px;
+      
+        text-align: center;
+    }
+    .menuHeader {
+        display: flex;
+        width: 50%;
+        height: 110px;
+      
+    }
+    a{
+        font-size: 17px;
+        padding-top: 1px;
+    }
+    i.fa-solid.fa-cart-shopping{
+        display: flex;
+        justify-content: flex-start;
+        width: 30%;
+        padding-left: 2px;
+        padding-top: 5px;
     }
     .menuNavegacion {
         display: block;
@@ -356,5 +420,11 @@ main{
     }
     .relative-laptop:hover{
         display: block;
+    }
+    li.menuHeader {
+        margin: 0;
+        margin-top: 10px;
+        font-size: 15px;
+        width: 20%;
     }
 }
