--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/css/mediaQueryCart.css" >
     <link rel="stylesheet" href="/css/productdetail.css">
     <link rel="stylesheet" href="/css/footer.css">
+    <link rel="stylesheet" href="/css/editUser.css">
     <link rel="stylesheet" href="/src/public/css/colors.css">
  <!--Fuentes-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
